--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "akazas-love.musicTyping": true,
     "akazas-love.typingDriven": false,
-    "akazas-love.snowInEditor": true
+    "akazas-love.snowInEditor": false
 }
